--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/application.properties
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
